--- a/Practica/styles.css
+++ b/Practica/styles.css
@@ -4,6 +4,7 @@
 	width:30px;
 	height: 30px;
 	border-radius: 50%;
+	position: relative;
 }
 
 #cuadrado{
@@ -26,5 +27,5 @@
 
 .inline-block{
 	display: inline-block;
-	position: fixed;
+	position:absolute;
 }
