--- a/Practica/styles.css
+++ b/Practica/styles.css
@@ -9,8 +9,8 @@
 
 #cuadrado{
 	background-color: #909FCE;
-	width: 90%;
-	height: 80%;
+	width: 250px;
+	height: 250px;
 	position:relative;
 	left:2.5%;
 	top: 5%;
@@ -19,11 +19,68 @@
 	border-width: 5px;
 }
 
-.terceraparte{
+#datos{
+	position: absolute;
+	left: 40%;
+	background-color: transparent;
+	border-style: solid;
+	border-width: 3px;
+	border-color: blue;
 	width: 30%;
 	height: 50%;
+	text-align: center;
+
+}
+#figuras{
+	width: 30%;
+	height: 50%;
+	position: absolute;
+	background: #D1D0D0;
+	text-align: center;
+	top: 400px;
+	right: 25px;
+	bottom: 5px;
+}
+
+#figura_1{
+	width: 80px;
+	height: 80px;
+	border-radius: 50px;
+	background-color: #42F7A9;
+	margin-top: 10px;
+}
+
+#figura_2{
+	width: 80px;
+	height: 80px;
+	margin-top: 10px;
+	background-color: #DEFF0D;
+}
+
+#figura_3{
+	width: 80px;
+	height: 80px;
+	margin-top: 10px;
+	border-radius: 50px;
+	background-color: #EE0DFF;
+}
+
+#creditos{
+	left: 95%;
+}
+
+.mucha-altura{
+	height:100%;
+	width: 100%;
+	position: absolute;
+
+}
+
+.terceraparte{
+	width: 30s	height: 50%;
 	background-color: gray;	
 }
+
 
 .inline-block{
 	display: inline-block;
